--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,16 @@ services:
     networks:
       - spotify-network
 
+  redis-subscriptions:
+    image: redis:7-alpine
+    container_name: redis-subscriptions
+    ports:
+      - "6380:6379"
+    volumes:
+      - redis-subscriptions-data:/data
+    networks:
+      - spotify-network
+
   # Mikroservisi
   users-service:
     build:
@@ -89,10 +99,27 @@ services:
     networks:
       - spotify-network
 
+  subscriptions-service:
+    build:
+      context: ./subscriptions-service
+      dockerfile: Dockerfile
+    container_name: subscriptions-service
+    ports:
+      - "8004:8004"
+    environment:
+      PORT: 8004
+      REDIS_URI: redis://redis-subscriptions:6379
+      JWT_SECRET: your-secret-key-change-in-production
+    depends_on:
+      - redis-subscriptions
+    networks:
+      - spotify-network
+
 volumes:
   mongodb-users-data:
   mongodb-content-data:
   redis-ratings-data:
+  redis-subscriptions-data:
 
 networks:
   spotify-network:
