--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,19 @@ services:
     networks:
       - spotify-network
 
+  neo4j-recommendation:
+    image: neo4j:5
+    container_name: neo4j-recommendation
+    ports:
+      - "7474:7474"
+      - "7687:7687"
+    environment:
+      NEO4J_AUTH: neo4j/password123
+    volumes:
+      - neo4j-recommendation-data:/data
+    networks:
+      - spotify-network
+
   # Mikroservisi
   users-service:
     build:
@@ -144,12 +157,31 @@ services:
     networks:
       - spotify-network
 
+  recommendation-service:
+    build:
+      context: ./recommendation-service
+      dockerfile: Dockerfile
+    container_name: recommendation-service
+    ports:
+      - "8006:8006"
+    environment:
+      PORT: 8006
+      NEO4J_URI: bolt://neo4j-recommendation:7687
+      NEO4J_USER: neo4j
+      NEO4J_PASSWORD: password123
+      JWT_SECRET: your-secret-key-change-in-production
+    depends_on:
+      - neo4j-recommendation
+    networks:
+      - spotify-network
+
 volumes:
   mongodb-users-data:
   mongodb-content-data:
   redis-ratings-data:
   redis-subscriptions-data:
   cassandra-notifications-data:
+  neo4j-recommendation-data:
 
 networks:
   spotify-network:
