--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -175,6 +175,34 @@ services:
     networks:
       - spotify-network
 
+  api-gateway:
+    build:
+      context: ./api-gateway
+      dockerfile: Dockerfile
+    container_name: api-gateway
+    ports:
+      - "8080:8080"
+    environment:
+      PORT: 8080
+      USERS_SERVICE_URL: http://users-service:8001
+      CONTENT_SERVICE_URL: http://content-service:8002
+      RATINGS_SERVICE_URL: http://ratings-service:8003
+      SUBSCRIPTIONS_SERVICE_URL: http://subscriptions-service:8004
+      NOTIFICATIONS_SERVICE_URL: http://notifications-service:8005
+      RECOMMENDATION_SERVICE_URL: http://recommendation-service:8006
+      JWT_SECRET: your-secret-key-change-in-production
+      REDIS_URI: redis://redis-ratings:6379
+    depends_on:
+      - users-service
+      - content-service
+      - ratings-service
+      - subscriptions-service
+      - notifications-service
+      - recommendation-service
+      - redis-ratings
+    networks:
+      - spotify-network
+
 volumes:
   mongodb-users-data:
   mongodb-content-data:
