--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -205,6 +205,7 @@ services:
       - "8080:8080"
       - "8443:8443"  # HTTPS port
     environment:
+      #TLS_ENABLED: "true"
       PORT: 8080
       USERS_SERVICE_URL: http://users-service:8001
       CONTENT_SERVICE_URL: http://content-service:8002
