--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,26 @@ services:
     networks:
       - spotify-network
 
+  # Jaeger - Distributed Tracing
+  jaeger:
+    image: jaegertracing/all-in-one:1.53
+    container_name: jaeger
+    ports:
+      - "6831:6831/udp"   # Jaeger thrift compact (agent)
+      - "6832:6832/udp"   # Jaeger thrift binary (agent)
+      - "5778:5778"       # Agent config HTTP
+      - "16686:16686"     # Jaeger UI
+      - "4317:4317"       # OTLP gRPC
+      - "4318:4318"       # OTLP HTTP
+      - "14250:14250"     # gRPC model
+      - "14268:14268"     # Jaeger thrift HTTP
+      - "9411:9411"       # Zipkin compatible
+    environment:
+      COLLECTOR_ZIPKIN_HOST_PORT: ":9411"
+      COLLECTOR_OTLP_ENABLED: "true"
+    networks:
+      - spotify-network
+
   # Mikroservisi
   users-service:
     build:
@@ -96,6 +116,10 @@ services:
       JWT_SECRET: your-secret-key-change-in-production
       BASE_URL: http://localhost:8080
       MOCK_EMAIL: "true"
+      # Jaeger tracing
+      JAEGER_ENDPOINT: http://jaeger:14268/api/traces
+      OTEL_EXPORTER_OTLP_ENDPOINT: http://jaeger:4318
+      SERVICE_NAME: users-service
       # Password expiry configuration (default: 60 days)
       # PASSWORD_MAX_AGE_DAYS: 60
       # For demo/simulation use minutes instead:
@@ -107,6 +131,7 @@ services:
     depends_on:
       - mongodb-users
       - redis-users
+      - jaeger
     volumes:
       - ./users-service/logs:/app/logs
       - ./certs:/app/certs:ro
@@ -124,8 +149,13 @@ services:
       PORT: 8002
       MONGODB_URI: mongodb://admin:admin123@mongodb-content:27017/content?authSource=admin
       JWT_SECRET: your-secret-key-change-in-production
+      # Jaeger tracing
+      JAEGER_ENDPOINT: http://jaeger:14268/api/traces
+      OTEL_EXPORTER_OTLP_ENDPOINT: http://jaeger:4318
+      SERVICE_NAME: content-service
     depends_on:
       - mongodb-content
+      - jaeger
     networks:
       - spotify-network
 
@@ -140,8 +170,13 @@ services:
       PORT: 8003
       REDIS_URI: redis://redis-ratings:6379
       JWT_SECRET: your-secret-key-change-in-production
+      # Jaeger tracing
+      JAEGER_ENDPOINT: http://jaeger:14268/api/traces
+      OTEL_EXPORTER_OTLP_ENDPOINT: http://jaeger:4318
+      SERVICE_NAME: ratings-service
     depends_on:
       - redis-ratings
+      - jaeger
     networks:
       - spotify-network
 
@@ -156,8 +191,13 @@ services:
       PORT: 8004
       REDIS_URI: redis://redis-subscriptions:6379
       JWT_SECRET: your-secret-key-change-in-production
+      # Jaeger tracing
+      JAEGER_ENDPOINT: http://jaeger:14268/api/traces
+      OTEL_EXPORTER_OTLP_ENDPOINT: http://jaeger:4318
+      SERVICE_NAME: subscriptions-service
     depends_on:
       - redis-subscriptions
+      - jaeger
     networks:
       - spotify-network
 
@@ -173,8 +213,13 @@ services:
       CASSANDRA_HOSTS: cassandra-notifications
       CASSANDRA_KEYSPACE: notifications
       JWT_SECRET: your-secret-key-change-in-production
+      # Jaeger tracing
+      JAEGER_ENDPOINT: http://jaeger:14268/api/traces
+      OTEL_EXPORTER_OTLP_ENDPOINT: http://jaeger:4318
+      SERVICE_NAME: notifications-service
     depends_on:
       - cassandra-notifications
+      - jaeger
     networks:
       - spotify-network
 
@@ -191,8 +236,13 @@ services:
       NEO4J_USER: neo4j
       NEO4J_PASSWORD: password123
       JWT_SECRET: your-secret-key-change-in-production
+      # Jaeger tracing
+      JAEGER_ENDPOINT: http://jaeger:14268/api/traces
+      OTEL_EXPORTER_OTLP_ENDPOINT: http://jaeger:4318
+      SERVICE_NAME: recommendation-service
     depends_on:
       - neo4j-recommendation
+      - jaeger
     networks:
       - spotify-network
 
@@ -215,6 +265,10 @@ services:
       RECOMMENDATION_SERVICE_URL: http://recommendation-service:8006
       JWT_SECRET: your-secret-key-change-in-production
       REDIS_URI: redis://redis-ratings:6379
+      # Jaeger tracing
+      JAEGER_ENDPOINT: http://jaeger:14268/api/traces
+      OTEL_EXPORTER_OTLP_ENDPOINT: http://jaeger:4318
+      SERVICE_NAME: api-gateway
       # TLS/HTTPS configuration
       # TLS_ENABLED: "true"
       # TLS_CERT_FILE: /app/certs/cert.pem
@@ -227,6 +281,7 @@ services:
       - notifications-service
       - recommendation-service
       - redis-ratings
+      - jaeger
     volumes:
       - ./certs:/app/certs:ro
     networks:
@@ -254,6 +309,7 @@ volumes:
   redis-users-data:
   cassandra-notifications-data:
   neo4j-recommendation-data:
+  jaeger-data:
 
 networks:
   spotify-network:
